# IPK1

./: CMakeLists.txt  Makefile  genericFunctions.c  genericFunctions.h  readme.md  structures.h
client/: main.c
env/__MACOSX/env/client/: ._file.txt
env/__MACOSX/env/server/anna/HTTP/: ._rfc1945.txt  ._rfc2109.txt
env/__MACOSX/env/server/bob/COAP/: ._rfc7252.txt  ._rfc7390.txt  ._rfc7641.txt
server/: main.c
